WebCore/bindings/js/kjs_css.cpp
@@ -25,16 +25,8 @@
 #include "config.h"
 #include "kjs_css.h"
 
-#include "CSSRule.h"
-#include "CSSRuleList.h"
-#include "Document.h"
-#include "HTMLNames.h"
-#include "HTMLStyleElement.h"
+#include "CSSPrimitiveValue.h"
 #include "JSCSSPrimitiveValue.h"
-#include "JSCSSRule.h"
-#include "JSCSSRuleList.h"
-#include "JSStyleSheet.h"
-#include "StyleSheetList.h"
 #include "kjs_dom.h"
 
 #include "kjs_css.lut.h"
@@ -42,122 +34,6 @@
 namespace WebCore {
 
 using namespace KJS;
-using namespace HTMLNames;
-
-const ClassInfo JSStyleSheetList::info = { "StyleSheetList", 0, &JSStyleSheetListTable, 0 };
-
-/*
-@begin JSStyleSheetListTable 2
-  length        WebCore::JSStyleSheetList::Length       DontDelete|ReadOnly
-  item          WebCore::JSStyleSheetList::Item         DontDelete|Function 1
-@end
-*/
-
-KJS_IMPLEMENT_PROTOTYPE_FUNCTION(JSStyleSheetListFunc) // not really a prototype, but doesn't matter
-
-JSStyleSheetList::JSStyleSheetList(ExecState* exec, StyleSheetList* styleSheetList, Document* doc)
-    : m_impl(styleSheetList)
-    , m_doc(doc) 
-{
-    setPrototype(exec->lexicalInterpreter()->builtinObjectPrototype());
-}
-
-JSStyleSheetList::~JSStyleSheetList()
-{
-    ScriptInterpreter::forgetDOMObject(m_impl.get());
-}
-
-JSValue* JSStyleSheetList::getValueProperty(ExecState* exec, int token) const
-{
-    switch (token) {
-        case Length:
-            return jsNumber(m_impl->length());
-        default:
-            ASSERT_NOT_REACHED();
-            return jsUndefined();
-    }
-}
-
-JSValue* JSStyleSheetList::indexGetter(ExecState* exec, JSObject* originalObject, const Identifier& propertyName, const PropertySlot& slot)
-{
-    JSStyleSheetList* thisObj = static_cast<JSStyleSheetList*>(slot.slotBase());
-    return toJS(exec, thisObj->m_impl->item(slot.index()));
-}
-
-JSValue* JSStyleSheetList::nameGetter(ExecState* exec, JSObject* originalObject, const Identifier& propertyName, const PropertySlot& slot)
-{
-    JSStyleSheetList* thisObj = static_cast<JSStyleSheetList*>(slot.slotBase());
-    Element* element = thisObj->m_doc->getElementById(propertyName);
-    return toJS(exec, static_cast<HTMLStyleElement*>(element)->sheet());
-}
-
-bool JSStyleSheetList::getOwnPropertySlot(ExecState* exec, const Identifier& propertyName, PropertySlot& slot)
-{
-    const HashEntry* entry = Lookup::findEntry(&JSStyleSheetListTable, propertyName);
-  
-    if (entry) {
-        switch(entry->value) {
-            case Length:
-                slot.setStaticEntry(this, entry, staticValueGetter<JSStyleSheetList>);
-                return true;
-            case Item:
-                slot.setStaticEntry(this, entry, staticFunctionGetter<JSStyleSheetListFunc>);
-                return true;
-        }
-    }
-
-    StyleSheetList* styleSheetList = m_impl.get();
-
-    // Retrieve stylesheet by index
-    bool ok;
-    unsigned u = propertyName.toUInt32(&ok);
-    if (ok && u < styleSheetList->length()) {
-        slot.setCustomIndex(this, u, indexGetter);
-        return true;
-    }
-
-    // IE also supports retrieving a stylesheet by name, using the name/id of the <style> tag
-    // (this is consistent with all the other collections)
-    // ### Bad implementation because returns a single element (are IDs always unique?)
-    // and doesn't look for name attribute (see implementation above).
-    // But unicity of stylesheet ids is good practice anyway ;)
-    Element* element = m_doc->getElementById(propertyName);
-    if (element && element->hasTagName(styleTag)) {
-        slot.setCustom(this, nameGetter);
-        return true;
-    }
-
-    return DOMObject::getOwnPropertySlot(exec, propertyName, slot);
-}
-
-JSValue* toJS(ExecState* exec, StyleSheetList* styleSheetList, Document* doc)
-{
-    // Can't use the cacheDOMObject macro because of the doc argument
-    if (!styleSheetList)
-        return jsNull();
-
-    ScriptInterpreter* interp = static_cast<ScriptInterpreter*>(exec->dynamicInterpreter());
-    DOMObject* ret = interp->getDOMObject(styleSheetList);
-    if (ret)
-        return ret;
-
-    ret = new JSStyleSheetList(exec, styleSheetList, doc);
-    interp->putDOMObject(styleSheetList, ret);
-    return ret;
-}
-
-JSValue* JSStyleSheetListFunc::callAsFunction(ExecState* exec, JSObject* thisObj, const List& args)
-{
-    if (!thisObj->inherits(&JSStyleSheetList::info))
-        return throwError(exec, TypeError);
-
-    StyleSheetList* styleSheetList = static_cast<JSStyleSheetList*>(thisObj)->impl();
-    if (id == JSStyleSheetList::Item)
-        return toJS(exec, styleSheetList->item(args[0]->toInt32(exec)));
-    return jsUndefined();
-}
-
-// -------------------------------------------------------------------------
 
 const ClassInfo JSRGBColor::info = { "RGBColor", 0, &JSRGBColorTable, 0 };
 
