WebCore/css/StyleSheetList.cpp
@@ -2,7 +2,7 @@
  * This file is part of the DOM implementation for KDE.
  *
  * (C) 1999-2003 Lars Knoll (knoll@kde.org)
- * Copyright (C) 2004, 2006 Apple Computer, Inc.
+ * Copyright (C) 2004, 2006, 2007 Apple Inc. All rights reserved.
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Library General Public
@@ -19,17 +19,34 @@
  * the Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
  * Boston, MA 02110-1301, USA.
  */
+
 #include "config.h"
 #include "StyleSheetList.h"
 
 #include "CSSStyleSheet.h"
+#include "Document.h"
+#include "HTMLNames.h"
+#include "HTMLStyleElement.h"
+#include "PlatformString.h"
 
 namespace WebCore {
+
+using namespace HTMLNames;
+
+StyleSheetList::StyleSheetList(Document* doc)
+    : m_doc(doc)
+{
+}
 
 StyleSheetList::~StyleSheetList()
 {
     for (DeprecatedPtrListIterator<StyleSheet> it (styleSheets); it.current(); ++it)
         it.current()->deref();
+}
+
+void StyleSheetList::documentDestroyed()
+{
+    m_doc = 0;
 }
 
 void StyleSheetList::add(StyleSheet* s)
@@ -56,4 +73,21 @@ StyleSheet* StyleSheetList::item(unsigned index)
     return index < length() ? styleSheets.at(index) : 0;
 }
 
+HTMLStyleElement* StyleSheetList::getNamedItem(const String& name) const
+{
+    if (!m_doc)
+        return 0;
+
+    // IE also supports retrieving a stylesheet by name, using the name/id of the <style> tag
+    // (this is consistent with all the other collections)
+    // ### Bad implementation because returns a single element (are IDs always unique?)
+    // and doesn't look for name attribute.
+    // But unicity of stylesheet ids is good practice anyway ;)
+    
+    Element* element = m_doc->getElementById(name);
+    if (element && element->hasTagName(styleTag))
+        return static_cast<HTMLStyleElement*>(element);
+    return 0;
 }
+
+} // namespace WebCore
