WebCore/css/StyleSheetList.h
@@ -1,8 +1,6 @@
 /*
- * This file is part of the DOM implementation for KDE.
- *
  * (C) 1999-2003 Lars Knoll (knoll@kde.org)
- * Copyright (C) 2004, 2006 Apple Computer, Inc.
+ * Copyright (C) 2004, 2006, 2007 Apple Inc. All rights reserved.
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Library General Public
@@ -28,12 +26,17 @@
 
 namespace WebCore {
 
+class Document;
+class HTMLStyleElement;
 class StyleSheet;
+class String;
 
-class StyleSheetList : public Shared<StyleSheetList>
-{
+class StyleSheetList : public Shared<StyleSheetList> {
 public:
+    StyleSheetList(Document*);
     ~StyleSheetList();
+
+    void documentDestroyed();
 
     unsigned length() const;
     StyleSheet* item(unsigned index);
@@ -41,9 +44,14 @@ public:
     void add(StyleSheet*);
     void remove(StyleSheet*);
 
+    HTMLStyleElement* getNamedItem(const String&) const;
+
     DeprecatedPtrList<StyleSheet> styleSheets;
+
+private:
+    Document* m_doc;
 };
 
-} // namespace
+} // namespace WebCore
 
-#endif
+#endif // StyleSheetList_h
